--- a/documentation/components/components-features.asciidoc
+++ b/documentation/components/components-features.asciidoc
@@ -180,13 +180,13 @@ buttons.
 .An Enabled and Disabled [classname]#Button#
 image::img/features-enabled-simple.png[width=30%, scaledwidth=50%]
 
-A disabled component is automatically put in read-only state. No client
-interaction with such a component is sent to the server and, as an important
+A disabled component is automatically put in read-only like state. No client
+interaction with a disabled component is sent to the server and, as an important
 security feature, the server-side components do not receive state updates from
-the client in the read-only state. This feature exists in all built-in
+the client in the disabled state. This feature exists in all built-in
 components in Vaadin and is automatically handled for all [classname]#Field#
-components for the field property value. For custom widgets, you need to make
-sure that the read-only state is checked on the server-side for all
+components that have a value. For custom widgets, you need to make
+sure that the disabled state is checked on the server-side for all
 safety-critical variables.
 
 === CSS Style Rules
@@ -426,7 +426,7 @@ endif::web[]
 ((("read-only property")))
 ((("Component interface", "read-only")))
 The property defines whether the value of a component can be changed. The
-property is mainly applicable to [classname]#Field# components, as they have a
+property is only applicable to [classname]#Field# components implementing the `HasValue` interface, as they have a
 value that can be edited by the user.
 
 [source, java]
@@ -449,16 +449,12 @@ The resulting read-only text field is shown in
 .A read-only component
 image::img/features-readonly-simple.png[width=50%, scaledwidth=80%]
 
-Setting a layout or some other component container as read-only does not usually
-make the contained components read-only recursively. This is different from, for
-example, the disabled state, which is usually applied recursively.
-
 Notice that the value of a selection component is the selection, not its items.
 A read-only selection component doesn't therefore allow its selection to be
-changed, but other changes are possible. For example, if you have a read-only
-[classname]#Table# in editable mode, its contained fields and the underlying
-data model can still be edited, and the user could sort it or reorder the
-columns.
+changed, but other changes are possible. For example, if you have a
+[classname]#Grid# with a read-only selection model in editable mode,
+its contained fields and the underlying data model can still be edited,
+and the user could sort it or reorder the columns.
 
 Client-side state modifications will not be communicated to the server-side and,
 more importantly, server-side field components will not accept changes to the
@@ -470,7 +466,7 @@ Also notice that while the read-only status applies automatically to the value
 of a field, it does not apply to other component variables. A
 read-only component can accept some other state changes from the client-side
 and some of such changes could be acceptable, such as change in the scroll bar
-position of a [classname]#Table#. Custom components should check the read-only
+position of a [classname]#ListSelect#. Custom components should check the read-only
 state for variables bound to business data.
 
 ////
