--- a/documentation/components/components-selection.asciidoc
+++ b/documentation/components/components-selection.asciidoc
@@ -7,6 +7,8 @@ layout: page
 [[components.selection]]
 = Selection Components
 
+For better overview on how selection works, see link:../datamodel/datamodel-selection.asciidoc[Selecting items]
+
 Vaadin offers many alternative ways for selecting one or more items. The core
 library includes the following selection components, all based on the
 [classname]#AbstractSelect# class:
@@ -87,14 +89,16 @@ ComboBox<Planet> select = new ComboBox<>("My Select");
 select.setItems(planets);
 
 select.setItemCaptionProvider(planet -> planet.getName());
-// or even select.setItemCaptionProvider(Planet::getName);
+// or even select.setItemCaptionGenerator(Planet::getName);
 
 // Select the first
-select.select(planets.get(0));
+select.setSelectedItem(planets.get(0));
+// or
+select.setValue(planets.get(0));
 ----
 
 In addition to a caption, an item can have an icon. The icon is set with
-[methodname]#setItemIconProvider()#.
+[methodname]#setItemIconGenerator()#.
 
 Typical use cases for captions are:
 
@@ -126,39 +130,12 @@ planets.add(new Planet("Mercury"));
 planets.add(new Planet("Venus"));
 planets.add(new Planet("Earth"));
 
-select.addItems(planets);
+select.setItems(planets);
 ----
 
 Using a field of a item as caption: the caption is retrieved using the
-[interfacename]#ItemCaptionProvider# typically given as Java 8 lambda:
+[interfacename]#ItemCaptionGenerator# typically given as Java 8 lambda.
 
-
-
-INDEX::
-Index number of item is used as caption.
-This caption mode is applicable only to data sources that implement the [interfacename]#Container.Indexed# interface.
-If the interface is not available, the component will throw a
-[classname]#ClassCastException#.
-The [classname]#AbstractSelect# itself does not implement this interface, so the mode is not usable without a separate data source.
-An [classname]#IndexedContainer#, for example, would work.
-
-ITEM:: [classname]#String# representation of item, acquired with
-[methodname]#toString()#, is used as the caption. This is applicable mainly when
-using a custom [classname]#Item# class, which also requires using a custom
-[classname]#Container# that is used as a data source for the selection
-component.
-
-PROPERTY:: Item captions are read from the [classname]#String# representation of the
-property with the identifier specified with
-[methodname]#setItemCaptionPropertyId()#. This is useful, for example, when you
-have a container that you use as the data source for the selection component,
-and you want to use a specific property for caption.
-
-+
-In the example below, we bind a selection component to a bean container and use
-a property of the bean as the caption.
-
-+
 [source, java]
 ----
 // A class that implements toString()
@@ -200,56 +177,23 @@ ComboBox<Planet> select =
 // Set the caption provider to read the
 // caption directly from the 'name'
 // property of the bean
-select.setItemCaptionProvider(Planet::getName);
+select.setItemCaptionGenerator(Planet::getName);
 ----
 
-[[components.selection.getset]]
-== Getting and Setting Selection
 
-You can get the item with [methodname]#getSelected()# of the
-[classname]#Select# interface that returns collection of selected items.
-You can select an item with the corresponding [methodname]#select()# method.
+[[components.selection.item-icons]]
+== Item Icons
 
-In multiselect mode, the [methodname]#getSelected()# returns an unmodifiable
-set of items. If no item is selected, the select will be an empty collection.
-
-The [classname]#ComboBox# and [classname]#NativeSelect# will show empty
-selection when no actual item is selected.
-
-
-[[components.selection.valuechange]]
-== Handling Selection Changes
-
-You can access currently selected item with the [methodname]#getSelected()# or
-[methodname]#getFirstSelected()# method of the component. Also, when
-handling selection changes with a
-[classname]#SelectionChangeListener#, the
-[classname]#SelectionChange# will have the selected items of the event.
-
-
-[source, java]
-----
-// Create a selection component with some items
-ComboBox<String> select = new ComboBox<>("My Select");
-select.setItems("Io", "Europa", "Ganymedes", "Callisto");
-
-// Handle selection change
-select.addSelectionChangeListener(event ->
-    layout.addComponent(new Label("Selected " +
-        event.getSelected())));
-----
-
-The result of user interaction is shown in
-<<figure.components.selection.valuechange>>.
-
-[[figure.components.selection.valuechange]]
-.Selected Item
-image::img/select-selected1.png[width=30%, scaledwidth=40%]
+You can set an icon for each item with [methodname]#setItemIconGenerator()#,
+in a fashion similar to captions. Notice, however, that icons are not
+supported in [classname]#NativeSelect#, [classname]#TwinColSelect#, and
+some other selection components and modes. This is because HTML does not
+support images inside the native [literal]#++select++#
+elements. Icons are also not really visually applicable.
 
 
 [[components.selection.newitems]]
 == Allowing Adding New Items
-
 
 [classname]#ComboBox# allows the user to add new items, when the user types
 in a value and presses kbd:[Enter]. You need to enable this with
@@ -280,7 +224,7 @@ ComboBox<Planet> select =
 select.setItems(planets);
 
 // Use the name property for item captions
-select.setItemCaptionProvider(Planet::getName);
+select.setItemCaptionGenerator(Planet::getName);
 
 // Allow adding new items and add
 // handling for new items
@@ -299,22 +243,69 @@ select.setNewItemHandler(inputString -> {
     Notification.show("Added new planet called " +
                       inputString);
 });
+
+
+[[components.selection.getset]]
+== Getting and Setting Selection
+
+For better overview on how selection works, see link:../datamodel/datamodel-selection.asciidoc[Selecting items]
+
+You can get selected the item with [methodname]#getValue()# of the
+[classname]#HasValue# interface that returns either a single selected item
+(case of `SingleSelect`) or a collection of selected items (case of `MultiSelect`).
+You can select an item with the corresponding [methodname]#setValue()# method.
+
+The [classname]#ComboBox# and [classname]#NativeSelect# will show empty
+selection when no actual item is selected.
+
+
+[[components.selection.valuechange]]
+== Handling Selection Changes
+
+You can access currently selected item with the [methodname]#getValue()# (`SingleSelect`) or
+[methodname]#getSelectedItems()# (`MultiSelect`) method of the component. Also, when
+handling selection changes with a
+[classname]#SelectionListener#, the
+[classname]#SelectionEvent# will have the selected items of the event. Single- and Multiselect
+components have their own more specific listener and event types, `SingleSelectionListener` for `SingleSelectionEvent` and `MultiSelectionListener` for `MultiSelectionEvent` respectively. Both can be added with the `addSelectionListener` method.
+
+
+[source, java]
 ----
-See the http://demo.vaadin.com/book-examples-vaadin7/book#component.select.combobox.newitemhandler[on-line example, window="_blank"].
+// Create a selection component with some items
+ComboBox<String> select = new ComboBox<>("My Select");
+select.setItems("Io", "Europa", "Ganymedes", "Callisto");
+
+// Handle selection change
+select.addSelectionChangeListener(event ->
+    layout.addComponent(new Label("Selected " +
+        event.getSelected().orElse("none")));
+----
+
+The result of user interaction is shown in
+<<figure.components.selection.valuechange>>.
+
+[[figure.components.selection.valuechange]]
+.Selected Item
+image::img/select-selected1.png[width=30%, scaledwidth=40%]
+
+
+----
 endif::web[]
 
 
 [[components.selection.multiple]]
 == Multiple Selection
 
+For better overview on how selection works, see link:../datamodel/datamodel-selection.asciidoc[Selecting items]
+
 Some selection components, such as [classname]#CheckBoxGroup#,
-[classname]#ListSelect# and [classname]#TwinColSelect# are multiselect components, 
+[classname]#ListSelect# and [classname]#TwinColSelect# are multiselect components,
 they extend [classname]#AbstractMultiSelect# class.
 
 
-Multiselect components use the [interfacename]#SelectionModel.Multi# selection model.
-This model allows to select multiple items.
-You can get and set the selection with the [methodname]#SelectionModel.getSelectedItems()# and
+Multiselect components use the `MultiSelect` interface which extends `HasValue`.
+This provides more fine grained API for selection. You can get and set the selection with the [methodname]#MultiSelect.getSelectedItems()# and
 [methodname]#SelectionModel.Multi.selectItems()# methods.
 
 A change in the selection will trigger a [classname]#SelectionChange#, which
@@ -338,14 +329,3 @@ select.addSelectionListener(event -> {
 });
 
 ----
-
-
-[[components.selection.item-icons]]
-== Item Icons
-
-You can set an icon for each item with [methodname]#setItemIconProvider()#,
-in a fashion similar to captions. Notice, however, that icons are not
-supported in [classname]#NativeSelect#, [classname]#TwinColSelect#, and
-some other selection components and modes. This is because HTML does not
-support images inside the native [literal]#++select++#
-elements. Icons are also not really visually applicable.
