--- a/documentation/datamodel/datamodel-selection.asciidoc
+++ b/documentation/datamodel/datamodel-selection.asciidoc
@@ -7,9 +7,7 @@ layout: page
 [[datamodel.selection]]
 = Selecting items
 
-In the chapter link:datamodel-providers.asciidoc[Showing Many Items in a Listing] populating listing components with data was discussed.
-In addition to displaying collections of data, listing components in the framework support the selection of the displayed items.
-The type of selection that each listing component supports differs from component to component, for instance `CheckBoxGroup` allows the selection of multiple items simultaneously, while `RadioButtonGroup` only allows a single item to be selected at a time.
+Listing components displaying data also support allowing the user to select items. Depending on component, it the user can select either one or several items at a time.
 
 How selection is handled in listings is split into three categories:
 
@@ -26,7 +24,7 @@ Single and multi selection components implement the `HasValue` interface, where 
 In practice this means that it is possible to get, set and listen to selection changes the same way you would with value changes in Vaadin field components.
 In the case of single select components `HasValue` is further extended with `SingleSelect`, and correspondingly with `MultiSelect` in the case of multi select components, giving further control over the current selection.
 
-An example of basic single selection with the ComboBox component, listing possible Availability enumerations is given below:
+An example of basic single selection with the ComboBox component:
 [source, java]
 ----
 ComboBox<Availability> comboBox = new ComboBox<>();
@@ -70,8 +68,7 @@ checkBoxGroup.getSelectedItems(); // now returns an empty set of Categories
 == Selection Models
 
 `Grid` component can hold either multi- or single- selection. Since grid can not be both `SingleSelect<SomePojo>` and
-`MultiSelect<SomePojo>` in the same time, grid itself is not a selection at all, but incapsulates one of those selections,
-which are subclasses of `SelectionModel` class.
+`MultiSelect<SomePojo>` in the same time, grid itself is not a select component, but it delegates the selection to a subclass of `SelectionModel` class.
 By default, `Grid` is in single selection mode, and we can obtain selection object using `asSingleSelect` method.
 
 [source, java]
@@ -99,8 +96,8 @@ Notification.show(
 [[datamodel.selection.binder]]
 === Selected Items
 
-Those selection objects (subclasses of `SelectionModel`) implement `HasValue` interface, and could be used as form fields,
-and all conversion and validation chains can be used also.
+Selection models (subclasses of `SelectionModel`) implement the `HasValue` interface, and thus can be used bound to data using a `Binder`.
+This way, conversions and validation can be used for selections.
 
 [source, java]
 ----
@@ -126,21 +123,21 @@ public static class Company {
 }
 
   Grid<Person> bossGrid = new Grid<>();
+  SingleSelect<Person> bossSelection = bossGrid.asSingleSelect();
+  
   Grid<Person> managersGrid = new Grid<>();
   managersGrid.setSelectionMode(Grid.SelectionMode.MULTI);
-  SingleSelect<Person> bossSelection = bossGrid.asSingleSelect();
   MultiSelect<Person> managersSelection = managersGrid.asMultiSelect();
+
   Binder<Company> companyBinder = new Binder<>();
   companyBinder.forField(bossSelection).bind(Company::getBoss, Company::setBoss);
   companyBinder.forField(managersSelection).bind(Company::getManagers, Company::setManagers);
 ----
 
-Of course, application-specific components can use the same approach to implement similar functionality.
-
 [[datamodel.selection.events]]
 === Selection Events
 
-Since both `SelectionModels` are regular `HasValue` objects, they support standard `addvalueChangeListener` method and
+`SelectionModel` implementations allow retrieving a `HasValue` object corresponding to the selection with the `asSingleSelect` and `asMultiSelect` methods. The `HasValue` implementations returned by those methods support the standard `addvalueChangeListener` method and
 all added listeners are notified about any selection change. In addition, selections support their own, selection-specific listeners,
 `SelectionListener`, `SingleSelectionListener`, and `MultiSelectionListener`. To add those listeners, we need to explicitly cast a selection to
 `SelectionModel`, `SingleSelectionModel`, or `MultiSelectionModel` respectively.
