--- a/documentation/application/application-architecture.asciidoc
+++ b/documentation/application/application-architecture.asciidoc
@@ -9,7 +9,7 @@ layout: page
 
 *_This section has not yet been updated to Vaadin Framework 8_*
 
-Vaadin user interfaces are built hierarchically from components, so that the
+Vaadin Framework user interfaces are built hierarchically from components, so that the
 leaf components are contained within layout components and other component
 containers. Building the hierarchy starts from the top (or bottom - whichever
 way you like to think about it), from the [classname]#UI# class of the
@@ -95,13 +95,11 @@ information about common architectures, see
 Application Architectures">>, which discusses layered architectures, the
 Model-View-Presenter (MVP) pattern, and so forth.
 
-ifdef::web[]
 The
 <<dummy/../../../framework/advanced/advanced-global#advanced.global,"Accessing
 Session-Global Data">> discusses the problem of passing essentially global
 references around, a common problem which is also visited in
 <<application.architecture.accessing>>.
-endif::web[]
 
 
 [[application.architecture.composition]]
@@ -116,29 +114,23 @@ extend layout components to create composite components.
 [source, java]
 ----
 class MyView extends VerticalLayout {
-    TextField entry   = new TextField("Enter this");
-    Label     display = new Label("See this");
-    Button    click   = new Button("Click This");
+    TextField entry = new TextField("Enter this");
+    Label display = new Label("See this");
+    Button click = new Button("Click This");
 
     public MyView() {
         addComponent(entry);
         addComponent(display);
         addComponent(click);
 
-        // Configure it a bit
         setSizeFull();
         addStyleName("myview");
     }
 }
 
-// Use it
+// Create an instance of MyView
 Layout myview = new MyView();
 ----
-
-This composition pattern is especially supported for creating forms, as
-described in
-<<dummy/../../../framework/datamodel/datamodel-itembinding#datamodel.itembinding.formclass,"Binding
-Member Fields">>.
 
 While extending layouts is an easy way to make component composition, it is a
 good practice to encapsulate implementation details, such as the exact layout
@@ -151,9 +143,9 @@ content representation.
 [source, java]
 ----
 class MyView extends CustomComponent {
-    TextField entry   = new TextField("Enter this");
-    Label     display = new Label("See this");
-    Button    click   = new Button("Click This");
+    TextField entry = new TextField("Enter this");
+    Label display = new Label("See this");
+    Button click = new Button("Click This");
 
     public MyView() {
         Layout layout = new VerticalLayout();
@@ -163,12 +155,11 @@ class MyView extends CustomComponent {
         layout.addComponent(click);
 
         setCompositionRoot(layout);
-
         setSizeFull();
     }
 }
 
-// Use it
+// Create an instance of MyView
 MyView myview = new MyView();
 ----
 
