--- a/documentation/architecture/architecture-client-side.asciidoc
+++ b/documentation/architecture/architecture-client-side.asciidoc
@@ -12,7 +12,7 @@ Engine")))
 The user interface of a server-side Vaadin application is rendered in the
 browser by the Vaadin Client-Side Engine. It is loaded in the browser when the
 page with the Vaadin UI is opened. The server-side UI components are rendered
-using __widgets__ (as they are called in Google Web Toolkit) on the client-side.
+using __widgets__ (as they are called in GWT) on the client-side.
 The client-side engine is illustrated in <<figure.architecture.client-side>>.
 
 [[figure.architecture.client-side]]
