--- a/documentation/installing/installing-toolchain.adoc
+++ b/documentation/installing/installing-toolchain.adoc
@@ -16,7 +16,7 @@ In this example, we use the following toolchain:
 * link:http://www.oracle.com/technetwork/java/javase/downloads/index.html[Oracle Java SE 8]
 * link:http://www.eclipse.org/downloads/[Eclipse IDE for Java EE Developers]
 * link:http://tomcat.apache.org/[Apache Tomcat 8.0 (Core)]
-* link:http://www.getfirefox.com/[Mozilla Firefox] browser
+* link:https://www.google.com/chrome/[Google Chrome] browser
 * link:http://vaadin.com/download/[Vaadin Framework]
 
 The above reference toolchain is a good choice of tools, but you can use almost
